3.0.10
* buffed rarity drops default config (needs config reset)
* loot crates now dont spawn with low rarities

3.0.9
* salvage station now stops working if there isn't at least 1 empty output slot
* fix regen not working if it's less than 1
* added a new crate type
* fixed mobs only spawning as epic or rare
* rarity kill requirements now scale exactly to configured rarity weight. So increasing mythic mob spawns in config will increase quest requirements for them too.

3.0.8
* fix group members having different quest requirement numbers
* map worlds now have no level restriction for legendary and mythic mobs
* altered quest time to scale with requirements
* quest req now scale with map tier
* map spawners now have chance to be random mob in maps, be careful!
* map death minute punishment now scales with map tier
* fixed stat bug that didnt allow them to go into minus. this will make maps a lot harder!
* fixed infinite map ticket bug
* fix map reward crate give method.

3.0.7
* attempting to fix teleport bugs
* fix elemental affinity crash
* added giveallstatstesting command
* fix quest completition being ints and not floats

3.0.6
* should fix map quest error

3.0.5
* map quests are now shared completition correctly
* removed torch active effect
* added 2 new synergies
* added achievements for mob rarity kills and boss kills
* updated chinese translations by mcfensi

3.0.4
* fix spell/talent screens for super HD mega large monitors 
* fix weapon durability not being affected by rarity, fixes swords having lower dura too
3.0.3
* various spell buffs
* fix lvl up msg

3.0.2
* fixed wands doing double dmg on right click
* changed lvl up message
* changed default spell hotbar swap key to R
* runes and runed gear now dont drop bellow lvl 8. 
* should fix trident server crash

3.0.1
* fixed spell hotbar not having correctly setup keybinds
* fixed dimensionconfigs names
* fixed weapons with elemental dmg having more stats than intended

3.0.0
