@@ -1,6 +1,7 @@
 3.0.10
 * buffed rarity drops default config (needs config reset)
 * loot crates now dont spawn with low rarities
+* added map info overlay. very simple percentages but should be enough.
 
 3.0.9
 * salvage station now stops working if there isn't at least 1 empty output slot
